# WebWork

./: .env  .env.example  .gitignore  AUDIT_REPORT.md  MODERATION.md  README.md  Start-WebWork.bat  __init__.py  autostart.py  bootstrap.ps1  bot_updates.py  classifieds.py  config.py  config_defaults.py  config_profiles.py  config_state.py  context_images.py  db.py  dedup.py  fetcher.py  filters.py  http_client.py  image_pipeline.py  images.py  logging_setup.py  main.py  moderation.py  moderation.yaml  moderator.py  mypy.ini  net.py  newsbot.db  newsbot.db-shm  newsbot.db-wal  profanity_ru.txt  profiles.yaml  publisher.py  rate_limiter.py  raw_pipeline.py  requirements.txt  (+19 more)
autorewrite/: README.md  pyproject.toml  rewrite_cli.py
autorewrite/rewriter/: __init__.py  markdown.py  pipeline.py  rules.py  similarity.py
formatting/: __init__.py  telegram.py
media/: __init__.py  extractor.py  fetcher.py  scorer.py  telegram.py
newsbot/: __init__.py  bot.py  config.py  main.py  storage.py
parsers/: __init__.py  html.py
rewriter/: __init__.py  base.py  llm.py  noop.py  rules.py
scripts/: run.bat  run.ps1  setup_env.bat  setup_env.ps1
tests/: test_autorewrite_pipeline.py  test_bot.py  test_bot_updates_sender_chat.py  test_classifieds_filter.py  test_config_profiles.py  test_config_validation.py  test_confirmation_rules.py  test_context_images.py  test_dedup_helpers.py  test_env_priority.py  test_fetcher_image_key.py  test_filters_relevance.py  test_formatting_new.py  test_formatting_telegram.py  test_image_cache.py  test_image_fallback.py  test_image_selection.py  (+31 more)
(+18 files in other folders)
